[gd_scene load_steps=3 format=3 uid="uid://byrkjggsh3t04"]

[ext_resource type="Script" path="res://Code/Attacks/Cards.gd" id="1_l30a3"]
[ext_resource type="Texture2D" uid="uid://ca7jotfce6p6r" path="res://icon.svg" id="2_sv6w1"]

[node name="Cardbase" type="Node2D"]
position = Vector2(455, 226)
script = ExtResource("1_l30a3")
metadata/_edit_group_ = true

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -64.0
offset_top = 3.0
offset_right = 104.0
offset_bottom = 293.0
color = Color(0, 0, 0, 1)

[node name="Name" type="Label" parent="."]
offset_left = -41.0
offset_top = -2.0
offset_right = 6.0
offset_bottom = 21.0
text = "Name"

[node name="description" type="RichTextLabel" parent="."]
offset_left = -43.0
offset_top = 158.0
offset_right = 45.0
offset_bottom = 198.0
text = "description"

[node name="Image" type="TextureRect" parent="."]
offset_left = -64.0
offset_top = 24.0
offset_right = 64.0
offset_bottom = 152.0
texture = ExtResource("2_sv6w1")
expand_mode = 1

[node name="ImageType" type="TextureRect" parent="."]
offset_left = 65.0
offset_top = 3.0
offset_right = 99.0
offset_bottom = 40.0
texture = ExtResource("2_sv6w1")
expand_mode = 1

[node name="Label" type="Label" parent="."]
offset_left = -53.0
offset_top = 270.0
offset_right = 52.0
offset_bottom = 293.0
text = "Attack:1"

[node name="MouseChecker" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -50.0
offset_top = 11.0
offset_right = 88.0
offset_bottom = 276.0
mouse_filter = 1
mouse_force_pass_scroll_events = false
mouse_default_cursor_shape = 2

[node name="HoldTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="gui_input" from="MouseChecker" to="." method="_on_mouse_checker_gui_input"]
[connection signal="mouse_entered" from="MouseChecker" to="." method="_on_mouse_checker_mouse_entered"]
[connection signal="mouse_exited" from="MouseChecker" to="." method="_on_mouse_checker_mouse_exited"]
[connection signal="timeout" from="HoldTimer" to="." method="_on_hold_timer_timeout"]
